<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/ibFruta"
        android:layout_width="132dp"
        android:layout_height="104dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imagefruta"
        android:onClick="showFruta"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tFrut"
        app:srcCompat="@drawable/fruta" />

    <TextView
        android:id="@+id/tFrut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/frutas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibAlba"
        android:layout_width="116dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imagealbaricoque"
        android:onClick="addAlbaricoque"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/albaricoque" />

    <ImageButton
        android:id="@+id/ibPlatano"
        android:layout_width="111dp"
        android:layout_height="79dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/imageplatano"
        android:onClick="addPlatano"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibAlba"
        app:srcCompat="@drawable/platano" />

    <ImageButton
        android:id="@+id/ibVerdura"
        android:layout_width="138dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imageverdura"
        android:onClick="showVerdura"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVerd"
        app:srcCompat="@drawable/verdura" />

    <TextView
        android:id="@+id/tVerd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/verduras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibFruta" />

    <ImageButton
        android:id="@+id/ibPatata"
        android:layout_width="105dp"
        android:layout_height="89dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/imagepatatas"
        android:onClick="addPatata"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibPlatano"
        app:srcCompat="@drawable/patatas" />

    <ImageButton
        android:id="@+id/ibPimiento"
        android:layout_width="111dp"
        android:layout_height="101dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/imagepimiento"
        android:onClick="addPimiento"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibPatata"
        app:srcCompat="@drawable/pimiento" />

    <TextView
        android:id="@+id/tAlbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/albaricoque"
        app:layout_constraintEnd_toStartOf="@+id/ibAlba"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tPlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="3dp"
        android:text="@string/pl_tano"
        app:layout_constraintEnd_toStartOf="@+id/ibPlatano"
        app:layout_constraintTop_toBottomOf="@+id/ibAlba" />

    <TextView
        android:id="@+id/tPata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/patatas"
        app:layout_constraintEnd_toStartOf="@+id/ibPatata"
        app:layout_constraintTop_toBottomOf="@+id/ibPlatano" />

    <TextView
        android:id="@+id/tPimi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:text="@string/pimiento"
        app:layout_constraintEnd_toStartOf="@+id/ibPimiento"
        app:layout_constraintTop_toBottomOf="@+id/tPata" />

    <TextView
        android:id="@+id/tCesta"
        android:layout_width="114dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/cesta_de_compra"
        app:layout_constraintBottom_toTopOf="@+id/tCestaComp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tCestaComp"
        android:layout_width="111dp"
        android:layout_height="164dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>